2010-06-17  Jungsook yang  <jungsook.yang@uci.edu>

	* config/or32/or32.c (or32_expand_branch): Added SFmode case.
	* config/or32/or32.md <define_expand "*cmpsf">: Added.
	<define_expand "*cmpsf_eq">: Added.
	<define_expand "*cmpsf_ne">: Added.
	<define_expand "*cmpsf_gt">: Added.
	<define_expand "*cmpsf_ge">: Added.
	<define_expand "*cmpsf_lt">: Added.
	<define_expand "*cmpsf_le">: Added.
	<define_insn "movdf">: Added.
	<define_insn "movsf">: Added.
	<define_insn "adddf3">: Added TARGET_DOUBLE_FLOAT.
	<define_insn "subdf3">: Added TARGET_DOUBLE_FLOAT.
	<define_insn "muldf3">: Added TARGET_DOUBLE_FLOAT.
	<define_insn "divdf3">: Added TARGET_DOUBLE_FLOAT.
	<define_insn "floatsisf2">: Added.
	<define_insn "fixunssfsi2">: Added.
	<define_insn "movdf">: Added.
	<define_insn "movsf">: Added.
	* config/or32/or32.opt: mdouble-float option added.

2007-10-07  Release Manager

	* GCC 4.2.2 released.

2007-09-25  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/32694
	2006-11-08  Roger Sayle  <roger@eyesopen.com>
	* tree-ssa-propagate.c (set_rhs): Verify tcc_comparison the same way
	as tcc_binary.
	* tree-ssa-ccp.c (fold_stmt_r) <COND_EXPR>: Use set_rhs to modify
	the condition after calling fold_binary.

2007-09-24  Jakub Jelinek  <jakub@redhat.com>

	PR debug/33316
	* dwarf2out.c (modified_type_die): Handle TYPE_DECL with NULL
	DECL_NAME.
	* dbxout.c (dbxout_type): Likewise.

2007-09-23  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.ac (ld_vers): Support GNU linker version xx.xx.*
	* configure: Regenerated.

2007-09-23  Jakub Jelinek  <jakub@redhat.com>

	* configure.ac (MAKEINFO): Handle makeinfo version 4.10 and above.
	* configure: Regenerated.

2007-09-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR bootstrap/33418
	* configure.ac (ld_vers): Support Linux linker.
	* configure: Regenerated.

2007-09-13  Seongbae Park <seongbae.park@gmail.com>

	* common.opt (femit-class-debug-always): Turn off by default.

2007-09-12  Bob Wilson  <bob.wilson@acm.org>
