@@ -1358,30 +1358,6 @@
    (set_attr "length" "1")])
 
 
-;; Moving double and single precision floating point values
-
-(define_insn "movdf"
-  [(set (match_operand:DF 0 "nonimmediate_operand" "=r, r, m, r")
-	(match_operand:DF 1 "general_operand"      " r, m, r, i"))]
-  ""
-  "*
-         return or32_output_move_double (operands);
-        "
-  [(set_attr "length" "2,2,2,3")])
-
-
-(define_insn "movsf"
-  [(set (match_operand:SF 0 "general_operand" "=r,r,m")
-        (match_operand:SF 1 "general_operand"  "r,m,r"))]
-  ""
-  "@
-   l.ori   \t%0,%1,0\t # movsf
-   l.lwz   \t%0,%1\t # movsf
-   l.sw    \t%0,%1\t # movsf"
-  [(set_attr "type" "move,load,store")
-   (set_attr "length" "1,1,1")])
-
-
 ;; Local variables:
 ;; mode:emacs-lisp
 ;; comment-start: ";; "
